# python-auth-lib

./: CONTRIBUTING.md  README.md  pyproject.toml  requirements-dev.txt  requirements.txt
.github/workflows/: ci.yml  publish.yml
src/auth_lib/: __init__.py
src/psp_auth/: __init__.py  config.py  core.py  endpoints.py  errors.py  logging.py  token.py  user.py
src/psp_auth/fastapi/: auth.py
src/psp_auth/testing/: __init__.py
tests/: auth.py  conftest.py  test_core.py  test_fastapi.py  test_test_auth.py
